--- a/requirements.txt
+++ b/requirements.txt
@@ -41,13 +41,10 @@ distlib==0.3.2
 docker-pycreds==0.4.0
 docutils==0.16
 entrypoints==0.3
-face-recognition-models==0.3.0
-fastai==2.1.10
 fastapi==0.70.0
 fastcore==1.3.19
 fastprogress==1.0.0
 filelock==3.0.12
-Flask==2.0.1
 flatbuffers==1.12
 fsspec==2021.5.0
 gast==0.4.0
@@ -176,19 +173,11 @@ starlette==0.16.0
 streamlit==0.82.0
 subprocess32==3.5.4
 tabulate==0.8.9
-tensorboard==2.6.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorboardX==2.2
-tensorflow==2.6.0
-tensorflow-estimator==2.6.0
-tensorflow-gpu==2.6.0
+tensorflow-cpu==2.6.0
 tensorflow-hub==0.9.0
-tensorflowjs==3.6.0
 termcolor==1.1.0
 terminado==0.9.2
 testpath==0.4.4
-tf-estimator-nightly==2.6.0.dev2021053001
 thinc==8.0.3
 threadpoolctl==2.1.0
 tokenizers==0.10.2
